core/components/popups/SubjectPopupContent.module.css
/* POP-UP STYLING */
.popUp {
  width: clamp(235px, 10vw, 384px);
  overflow-x: clip;
  border-radius: var(--map-popup-border-radius);
  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.25);
  border: 0.125rem solid #333;
  user-select: none;
  -webkit-user-select: none;
}

.popUpFeatureArea {
  pointer-events: none;
  overflow: hidden;
  border-radius: var(--map-popup-border-radius) var(--map-popup-border-radius) 0 0;
  transition: opacity 150ms ease;
}

:global(#map-container.gw-map-dragging) .popUpFeatureArea {
  opacity: 0.85;
}

.imageContainer {
  width: 100%;
  height: auto;
  line-height: 0;
  border-bottom: 0.125rem solid #00c49a;
  box-shadow: 0 0 0.25rem #333;
}

.popUpImage {
  width: 100%;
}

.popUpContent {
  padding: 0;
  pointer-events: auto;
  background-color: #eeeffc;
  border-radius: 0 0 var(--map-popup-border-radius) var(--map-popup-border-radius);
  overflow: hidden;
}

.popUpHeader {
  background: var(--ocean-gradient);
  padding: 0.25rem 0 0.625rem 0.5rem;
}

.popUpButtonsContainer {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
  margin-bottom: 0.5rem;
  padding-bottom: 1rem;
  gap: 0.75rem;
}

:global(#gw-map) button.popUpButton {
  display: flex;
  align-items: center;
  cursor: pointer;
  padding: 0.33rem;
  border-radius: var(--map-popup-border-radius);
  border: 1px solid #ccc;
}

:global(#gw-map) button.popUpButton:hover {
  background-color: rgba(221, 222, 235, 0.33);
}

:global(#gw-map) button.popUpButton svg {
  flex: 0 1 25%;
}

.popUpButtonText {
  align-self: center;
  margin-left: 0.5rem;
  font-size: 1rem;
  line-height: 1.2em;
}

button.popUpButton[data-active="true"] .popUpButtonText {
  font-weight: 700;
}

.subjectName,
.species {
  --h2-heading-color: #ffffff;
  --body-text-color: #cccccc;
}

.species {
  font-style: italic;
}

.popUpBody {
  padding: 1rem 0.5rem 0.25rem 0.5rem;
  display: flex;
  flex-flow: column nowrap;
  overflow-y: auto;
}

:global(#gw-map) h3:global(.map-heading).summaryHeading {
  margin-bottom: 0.25rem;
}

.summaryText {
  --font-size: var(--map-small-body-font-size);
}

.nameContainer {
  padding: 15px;
}

.popUp > p {
  margin: 1pt;
}

.date {
  font-size: 8pt;
  width: 45%;
  padding-right: 5px;
}

.arrow {
  transform: rotate(180deg);
}

.ulList {
  margin: none;
}

.mapboxgl-popup-close-button {
  display: none;
}

